fix: [SRM-9294]: The number of nodes are going out of space and fix the spacing in the Verify step summary section (#7839)

--- a/src/modules/85-cv/components/ExecutionVerification/components/DeploymentProgressAndNodes/components/DeploymentNodes/DeploymentNodes.module.scss
+++ b/src/modules/85-cv/components/ExecutionVerification/components/DeploymentProgressAndNodes/components/DeploymentNodes/DeploymentNodes.module.scss
@@ -6,9 +6,11 @@
  */
 
 .main {
-  height: 200px !important;
+  height: 100px !important;
   width: 100% !important;
   position: relative;
+  overflow: auto;
+  margin-bottom: 1em !important;
 
   .hexagonList {
     height: 100% !important;
