--- a/src/modules/85-cv/components/ExecutionVerification/components/ExecutionVerificationSummary/components/SummaryOfDeployedNodes/SummaryOfDeployedNodes.module.scss
+++ b/src/modules/85-cv/components/ExecutionVerification/components/ExecutionVerificationSummary/components/SummaryOfDeployedNodes/SummaryOfDeployedNodes.module.scss
@@ -6,9 +6,11 @@
  */
 
 .main {
+  margin-top: 16px !important;
   .summaryContainer {
     width: 80% !important;
     margin: 30px auto !important;
+    margin-top: 16px !important;
     margin-left: 0 !important;
     display: flex;
     justify-content: space-between;
@@ -16,6 +18,7 @@
     .summaryContent {
       width: 100% !important;
       height: 100% !important;
+      margin-right: 24px;
 
       .violations {
         display: flex;
